# mydocs.domain.example

./: .bumpversion.cfg  .cruft.json  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
mydocs/domain/: __init__.py  cli.py
tests/: test_mydocs-domain.py
