[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mydocs.domain.example"
version = "0.1.0"
authors = [{ name = "Gonzo Santos", email = "gonzo.santos@gmail.com" }]
license = "MIT"
requires-python = ">=3.7"
description = "Python Namespace Package contains all you need to create a Python namespace package."
keywords = ["mydocs.domain.example"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cookies",
    "tox",
    "flake8"
]
docs = [
    "sphinx",
    "furo",
]
build = [
    "build",
    "twine",
    "pep517"
]
dev = [
    "mydocs.domain.example[tests, docs]",
    "pre-commit",
    "cruft",
    "black",
    "isort",
]

[tool.black]
line-length = 79
skip-string-normalization = true
